[package]
name = "melwalletd-prot"
version = "0.3.1"
edition = "2021"
repository="https://github.com/themeliolabs/melwalletd-prot"
license="ISC"
description="RPC protocol for Themelio's reference wallet microservice"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
nanorpc = "0.1.12"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
stdcode = "0.1.14"
melstructs = "0.3.0"
thiserror = "1.0.38"
tmelcrypt = "0.2.7"
